# financial-datasets

./: .gitignore  LICENSE  README.md  pyproject.toml
financial_datasets/: dataset.py  filings.py  generator.py  model.py  parser.py  prompts.py  tools.py
financial_datasets/generators/: datasets.py
financial_datasets/llm/: openai.py
tests/: test_generator.py  test_parser.py
