[tool.poetry]
name = "financial-datasets"
version = "0.1.17"
description = "Financial datasets for LLMs"
authors = ["Virat Singh <virat@virat.ai>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "financial_datasets"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.28.1"
tiktoken = "^0.6.0"
pypdf2 = "^3.0.1"
langchain-text-splitters = "^0.0.1"
edgartools = "2.21.1"
pydantic = "2.7.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
twine = "^5.0.0"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
